--- a/server/data/apps.json
+++ b/server/data/apps.json
@@ -787,6 +787,10 @@
       {
         "elementName": "Funding",
         "elementURL": "https://github.com/stonega/tsacdop/releases/tag/v0.5.4"
+      },
+      {
+        "elementName": "Chapters",
+        "elementURL": "https://github.com/stonega/tsacdop/releases/tag/v0.5.8"
       }
     ]
   },
